[gd_scene load_steps=2 format=3 uid="uid://dialogue_box"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_box.gd" id="1_script"]

[node name="DialogueBox" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Speaker"

[node name="DialogueLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue text goes here..."
fit_content = true

[node name="ContinueIndicator" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2
text = "â–¼"

[node name="InteractionPrompt" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -150.0
offset_right = 50.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="InteractionPrompt"]
layout_mode = 2
horizontal_alignment = 1
text = "[Z] Check"
